# etherscan-converter

./: .gitignore  Makefile  README.md  example.env  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docker/: Dockerfile
src/etherscan_converter/: __main__.py  config.py  enums.py
src/etherscan_converter/_base/: aiohttp_client.py
src/etherscan_converter/adapters/: etherscan_client.py  http.py
src/etherscan_converter/entrypoints/: custom_route.py  fastapi_app.py  http_server.py  response_schema.py
src/etherscan_converter/entrypoints/api_v1/: api.py  schemas.py
src/etherscan_converter/entrypoints/api_v1/endpoints/: health_check.py  transaction_data.py
tests/: conftest.py  fixtures_generate_data.py  test_decode.py  test_etherscan_client.py
